<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.view.login.tabs.SignInFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/sign_in_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/input_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hintAlias"
                android:hint="@string/hintAlias"
                android:text="@string/sampleSignInAlias"
                android:inputType="text" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hintPassword"
                android:hint="@string/hintPassword"
                android:text="@string/samplePassword"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_fields"
            android:layout_centerHorizontal="true"
            android:text="@string/signInButton" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>