<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/authorInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".client.view.main.tabs.SaleListFragment">

        <ImageView
            android:id="@+id/authorImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/userImageContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/authorImage"
            android:orientation="vertical">

            <TextView
                android:id="@+id/authorAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/sampleUserName" />

            <TextView
                android:id="@+id/postDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sampleAlias" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/statusContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authorInfo" />

</RelativeLayout>

